tests/failing/1-missing_args/main.rgo
exit: @exit
str: @str
printf: @printf
foo: (a: str, b: str, ok: (str)){
    printf("%s %s", a, b, exit(0))
}
main: () {
    foo
}
